# oaat_fates_clm

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
configs/: analagous_params.yml  variable_conversion.yml
data/: min_max_values.csv
oaat_library/: plotting.py  processing.py  utils.py
